Fix wrapping in header and footer

--- a/static/main.css
+++ b/static/main.css
@@ -205,9 +205,6 @@ small {
     text-align: center;
     margin-top: 2rem;
     margin-bottom: 2rem;
-    a {
-        text-wrap: nowrap;
-    }
     h1 {
         font-size: 2.5rem;
     }
@@ -284,9 +281,14 @@ img {
 }
 
 .footer {
-    margin-top: 1rem;
+    margin-top: 2rem;
     opacity: 50%;
     text-align: center;
+    text-wrap: balance;
+}
+
+.footer p {
+  margin: 1em;
 }
 
 .giallo-l {
